
0.7.0
      - Added "search" URI template to the API server's `/index.json`.
      - Added full documentation.
      - The indexer now respects the `no_index` key in the meta file.
        Specifically, it will ignore any documentation files that match the
        no_index spec. They won't be indexed.
      - Changed the default `mirror_root` subdirectory from "pgxn" to
        "mirror".

0.6.9   2011-03-29T04:43:53
      - Fixed option processing in `pgxn_api.psgi` so that it deals only with
        the options we care about. Otherwise it fails to start when running
        under Starman.

0.6.8   2011-03-29T04:18:30
      - Added X-PGXN-API-Version header to all HTTP responses.
      - Added required `errors_to` and `errors_from` parameters to the router.
      - Added required `errors_to` and `errors_from` options to
        `pgxn_api.psgi`, as well as the `doc_root` option.
      - Added the `--root` option to `pgxn_api_sync`.

0.6.7   2011-03-29T02:18:01
      - Moved the doc path in the extension JSON file under the release status
        key.

0.6.6   2011-03-29T01:13:48
      - Changed `{+path}` in the doc URI template to `{+doc}`, since that
        will be more meaningful in other contexts.
      - Added the `doc` key to the `provides` hashes in the distribution
        metadata. It contains the doc path (as used by the doc URI template)
        to the doc with the same base name as the provided extension.
      - Added the `doc` key to the extension search index, so it's easy to
        link to the documentation page from extension search results.

0.6.5   2011-03-28T03:57:52
      - The search API no longer fails when only "q" query parameter is
        passed.
      - Added a 500 error handler that sends an email on error.

0.6.4   2011-03-28T03:07:13
      - Updated for PGXN::API::Searcher v0.6.1. 
      - Now only one search URL, `/search`. The index is specified via the
        `in` query parameter.

0.6.3   2011-03-28T02:08:01